<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#33FFF0"
    android:gravity="center"
    tools:context=".MainActivity">


      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <Button
              android:id="@+id/bdButtonId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/bd"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml"
              />


          <Button
              android:id="@+id/inButtonId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/in"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/pakButtonId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/pak"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/maldId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/mald"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/bhuId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/bhu"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/nepId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/nep"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/sriId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/sri"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />

          <Button
              android:id="@+id/afghanId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/afghan"
              android:textAllCaps="false"
              android:textSize="28sp"
              android:padding="20dp"
              android:textStyle="bold"
              android:layout_margin="20dp"
              android:layout_marginHorizontal="20dp"
              android:onClick="myFun"
              tools:ignore="UsingOnClickInXml" />


      </LinearLayout>


</ScrollView>